5/16/12 decided to use pickers instead of spinners, deleted version of interactive equation with spinners
# 0.00.13 (63678) Apr 20, 2012
4/19/12 fix sign on reduced equations when slope is an integer
4/19/12 restore use of pickers
# 0.00.12 (63651) Apr 19, 2012
4/19/12 identical to 0.00.11, but uses spinners instead of pickers
4/19/12 temporarily replace pickers with spinners, so we can compare in 2 identical dev versions
# 0.00.11 (63649) Apr 19, 2012
4/19/12 make rise/run values slightly less transparent, so that the values are more clearly-visible when they are on top of other things
4/19/12 make manipulators slightly larger, to encourage users to play with them
4/19/12 layout tweak in picker
4/19/12 clean up standard line icons (no equation on line, shorter line)
4/19/12 align fraction dividing line with center of equals sign
4/19/12 color-code title of equation controls to match the interactive line
4/19/12 use a thinner stroke for picker numbers, the aliasing is less noticeable
4/19/12 use less-saturated colors for picker button highlight
4/19/12 center root node on stage in tab 1
4/19/12 make sign outside picker same color as number in picker
4/19/12 add a flag to make it easy to switch between spinners and pickers in interactive equation
# 0.00.10 (63626) Apr 19, 2012
4/19/12 dev version with refined pickers
4/19/12 color tweaks
4/19/12 use number color for button highlight color, white highlight wasn't noticeable enough
4/19/12 AP picker change requests: use gray gradient for buttons, use color for numbers, black outline on numbers
4/19/12 i18n for format of xy coordinates in point tool
4/17/12 use gradients for picker buttons
4/17/12 simplify color scheme for pickers
4/17/12 add model for point-slope line format, add stub for base class
4/17/12 new point tool image from AP
4/17/12 make GraphNode more object-oriented
4/17/12 add test to GraphNode, move view-specific assertion from Graph to GraphNode
4/17/12 repackage classes used in >1 tab